Css de la ostia

--- a/Cliente/Trimestre 1/Ejercicios/Ejercicios Árbol DOM/ejercicio17.html
+++ b/Cliente/Trimestre 1/Ejercicios/Ejercicios Árbol DOM/ejercicio17.html
@@ -31,7 +31,7 @@
   </head>
   <body>
     <h1>Elige el caballo por el que quieras apostar</h1>
-    <p>Tu dinero: <span id="dinero_usuario">100</span></p>
+    <p>Tu dinero: <span id="dinero_usuario">100</span> €</p>
     <div id="Zeus">
       <h3>Zeus</h3>
       <img src="img/caballo1.jpg" alt="Caballo 1" />
