index html y css creados

--- a/Cliente/public/Ejercicios Árbol DOM/carrera_caballos.html
+++ b/Cliente/public/Ejercicios Árbol DOM/carrera_caballos.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ejercicio 17</title>
-    <script src="ejercicio17.js"></script>
-    <link rel="stylesheet" href="ejercicio17.css">
+    <script src="carrera_caballos.js"></script>
+    <link rel="stylesheet" href="carrera_caballos.css">
     <style>
       div {
         width: 150px;
