--- a/Cliente/public/Ejercicios Árbol DOM/galeria.html
+++ b/Cliente/public/Ejercicios Árbol DOM/galeria.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ejercicio 4</title>
-    <script src="ejercicio4.js"></script>
-    <link rel="stylesheet" href="ejercicio4.css">
+    <script src="galeria.js"></script>
+    <link rel="stylesheet" href="galeria.css">
 </head>
 <body>
     <button onclick="cambiar_imagen(false)">Retroceder</button>
