--- a/Cliente/public/Ejercicios Árbol DOM/timerImagenes.html
+++ b/Cliente/public/Ejercicios Árbol DOM/timerImagenes.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ejercicio 4</title>
-    <script src="timerEj4.js"></script>
-    <link rel="stylesheet" href="ejercicio4.css">
+    <script src="timerImagenes.js"></script>
+    <link rel="stylesheet" href="galeria.css">
 </head>
 <body>
     <img src="img/mario64.jpg" id="imagen">
