--- a/Cliente/public/Ejercicios Árbol DOM/generar_monedas.html
+++ b/Cliente/public/Ejercicios Árbol DOM/generar_monedas.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ejercicio 18</title>
-    <script src="ejercicio18.js"></script>
+    <script src="generar_monedas.js"></script>
 </head>
 <body>
     <div id="monedas">0</div>
