Jueguito de la tabla

--- a/Cliente/public/Ejercicios Árbol DOM/index.html
+++ b/Cliente/public/Ejercicios Árbol DOM/index.html
@@ -37,10 +37,10 @@
         <a href="generar_monedas.html">Entrar</a>
       </article>
 
-      <article class="game-card locked">
-        <h3>Ruleta nocturna</h3>
-        <p>La casa siempre gana. Siempre.</p>
-        <span>Bloqueado</span>
+      <article class="game-card">
+        <h3>El juego de la tabla</h3>
+        <p>Aquí no pierdes ni ganas dinero. Solo diviértete 😉😜</p>
+        <a href="tabla.html">Entrar</a>
       </article>
     </section>
   </main>
