--- a/Cliente/public/Ejercicios Árbol DOM/tabla.html
+++ b/Cliente/public/Ejercicios Árbol DOM/tabla.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>El juego de la tabla</title>
-    <script src="tabla.js"></script>
-    <style>
+    <link rel="stylesheet" href="tabla.css" />
+    <!-- <style>
         table{
             width: 750px;
             height: 750px;
@@ -14,51 +14,54 @@
         td{
             border: 1px solid black;
         }
-    </style>
+    </style> -->
   </head>
   <body>
+    <div id="movimientos">Movimientos: 0</div>
     <table>
-        <tbody>
-      <tr>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-      </tr>
-      <tr>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-      </tr>
-      <tr>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-      </tr>
-      <tr>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-      </tr>
-      <tr>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-      </tr>
-    </tbody>
+      <tbody>
+        <tr>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+      </tbody>
     </table>
     <button>Arriba</button>
     <button>Derecha</button>
     <button>Abajo</button>
     <button>Izquierda</button>
+
+    <script src="tabla.js"></script>
   </body>
 </html>
