Con localStorage pongo cuantas veces se ha conseguido una moneda con el botón de generar

--- a/Cliente/public/generar_monedas.html
+++ b/Cliente/public/generar_monedas.html
@@ -21,7 +21,9 @@
 
       <!-- BOTÓN (si es botón) -->
       <button id="generar" class="generate-btn">Generar moneda</button>
-
+      <p>
+        Monedas que has generado aquí: <span id="monedas_generadas">0</span>
+      </p>
       <!-- OPCIÓN IMAGEN (por si luego cambias) -->
       <!--
     <img
@@ -31,6 +33,7 @@
       alt="Generar moneda"
     />
     --></main>
+
     <script src="generar_monedas.js"></script>
   </body>
 </html>
