API de Dragon Ball añadida

--- a/Cliente/public/carrera_caballos.html
+++ b/Cliente/public/carrera_caballos.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Carrera de Caballos</title>
-    <script src="carrera_caballos.js"></script>
-    <link rel="stylesheet" href="carrera_caballos.css">
+    <link rel="stylesheet" href="css/carrera_caballos.css" />
     <style>
       div {
         width: 150px;
@@ -60,9 +59,16 @@
     <section>
       <output id="apuesta"></output>
       <label for="dinero_apostado">¿Cuánto quieres apostar?</label>
-      <input type="number" name="dinero_apostado" id="dinero_apostado" value="0"/>
+      <input
+        type="number"
+        name="dinero_apostado"
+        id="dinero_apostado"
+        value="0"
+      />
       <button id="run">CORRER</button>
       <button id="reset">Resetear</button>
     </section>
+
+    <script src="js/carrera_caballos.js"></script>
   </body>
 </html>
