--- a/Cliente/public/generar_monedas.html
+++ b/Cliente/public/generar_monedas.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Coin Generator</title>
-    <link rel="stylesheet" href="generar_monedas.css" />
+    <link rel="stylesheet" href="css/generar_monedas.css" />
   </head>
   <body>
     <main class="coin-machine">
@@ -34,6 +34,6 @@
     />
     --></main>
 
-    <script src="generar_monedas.js"></script>
+    <script src="js/generar_monedas.js"></script>
   </body>
 </html>
