--- a/Cliente/public/index.html
+++ b/Cliente/public/index.html
@@ -15,7 +15,8 @@
     <!-- Descripción de mi página -->
     <title>El Casino de la noche</title>
     <!-- Título de mi página -->
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="css/index.css" />
+    <link rel="stylesheet" href="css/responsive.css">
   </head>
   <body>
     <!-- <header>
@@ -74,10 +75,10 @@
         <article class="game-card">
           <h3>Adivina el Personaje</h3>
           <p>
-            Adivina el personaje de la API de ... Si aciertas, ganas monedas. Si
+            Adivina el personaje de la API de Dragon Ball. Si aciertas, ganas monedas. Si
             no, las pierdes
           </p>
-          <a href="adivina_personaje.html">Entrar</a>
+          <a href="DragonBall/index.html">Entrar</a>
         </article>
       </section>
     </main>
