--- a/Cliente/public/tabla.html
+++ b/Cliente/public/tabla.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>El juego de la tabla</title>
-    <link rel="stylesheet" href="tabla.css" />
+    <link rel="stylesheet" href="css/tabla.css" />
     <!-- <style>
         table{
             width: 750px;
@@ -62,6 +62,6 @@
     <button>Abajo</button>
     <button>Izquierda</button>
 
-    <script src="tabla.js"></script>
+    <script src="js/tabla.js"></script>
   </body>
 </html>
