Seguridad en las apuestas de la carrera, y botón para volver atrás

--- a/Cliente/public/DragonBall/index.html
+++ b/Cliente/public/DragonBall/index.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dragon Ball - Personajes</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
     <h1>Personajes de Dragon Ball</h1>
-    <img src="" alt="Foto del personaje" id="imagenPersonaje">
-    <div id="botones">
-        
-    </div>
-    
+    <img src="" alt="Foto del personaje" id="imagenPersonaje" />
+    <div id="botones"></div>
+    <p>Tienes <span id="dinero_usuario">100</span> €</p>
+
+    <a href="../index.html" class="casino-back"> ⬅ Volver al Casino </a>
+
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
