--- a/Cliente/public/carrera_caballos.html
+++ b/Cliente/public/carrera_caballos.html
@@ -69,6 +69,8 @@
       <button id="reset">Resetear</button>
     </section>
 
+    <a href="index.html" class="casino-back"> ⬅ Volver al Casino </a>
+
     <script src="js/carrera_caballos.js"></script>
   </body>
 </html>
