--- a/Cliente/public/generar_monedas.html
+++ b/Cliente/public/generar_monedas.html
@@ -32,7 +32,9 @@
       class="coin-image"
       alt="Generar moneda"
     />
-    --></main>
+    -->
+      <a href="index.html" class="casino-back"> ⬅ Volver al Casino </a>
+    </main>
 
     <script src="js/generar_monedas.js"></script>
   </body>
