--- a/Cliente/public/tabla.html
+++ b/Cliente/public/tabla.html
@@ -62,6 +62,8 @@
     <button>Abajo</button>
     <button>Izquierda</button>
 
+    <a href="index.html" class="casino-back"> ⬅ Volver al Casino </a>
+
     <script src="js/tabla.js"></script>
   </body>
 </html>
