Css disabled para la carrera

--- a/Cliente/public/DragonBall/index.html
+++ b/Cliente/public/DragonBall/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
@@ -10,7 +10,10 @@
     <h1>Personajes de Dragon Ball</h1>
     <img src="" alt="Foto del personaje" id="imagenPersonaje" />
     <div id="botones"></div>
-    <p>Tienes <span id="dinero_usuario">100</span> €</p>
+    <div id="hud-dinero">
+      <span class="hud-label">Zenis</span>
+      <span id="dinero_usuario">100</span>
+    </div>
 
     <a href="../index.html" class="casino-back"> ⬅ Volver al Casino </a>
 
