--- a/Cliente/public/index.html
+++ b/Cliente/public/index.html
@@ -37,8 +37,8 @@
       </nav>
 
       <div class="header-right">
-        <a href="#" class="login">Iniciar sesión</a>
-        <a href="#" class="register">Registro</a>
+        <a href="login.html" class="login">Iniciar sesión</a>
+        <a href="registro.html" class="register">Registro</a>
       </div>
     </header>
 
