Páginas de contacto, sobre nostros y faqs

--- a/Cliente/public/index.html
+++ b/Cliente/public/index.html
@@ -30,10 +30,10 @@
       </div>
 
       <nav class="header-nav">
-        <a href="#">Inicio</a>
-        <a href="#">FAQs</a>
-        <a href="#">Contacto</a>
-        <a href="#">Sobre nosotros</a>
+        <a href="./index.html">Inicio</a>
+        <a href="./faqs.html">FAQs</a>
+        <a href="./contacto.html">Contacto</a>
+        <a href="./sobre_nosotros.html">Sobre nosotros</a>
       </nav>
 
       <div class="header-right">
