--- a/Cliente/public/contacto.html
+++ b/Cliente/public/contacto.html
@@ -15,13 +15,16 @@
 
   <form class="contact-form">
     <label>Nombre</label>
-    <input type="text" required>
+    <input type="text" name="nombre" required>
 
     <label>Email</label>
-    <input type="email" required>
+    <input type="email" name="email" required>
+
+     <label>Teléfono</label>
+    <input type="tel" name="telefono" required>
 
     <label>Mensaje</label>
-    <textarea rows="5" required></textarea>
+    <textarea rows="5" name="mensaje" required></textarea>
 
     <button type="submit">Enviar mensaje</button>
   </form>
