--- a/Cliente/public/index.html
+++ b/Cliente/public/index.html
@@ -1,6 +1,7 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="es">
   <head>
+    <meta charset="UTF-8" />
     <!-- Codificación UTF-8 universal -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Responsive -->
@@ -16,7 +17,7 @@
     <title>El Casino de la noche</title>
     <!-- Título de mi página -->
     <link rel="stylesheet" href="css/index.css" />
-    <link rel="stylesheet" href="css/responsive.css">
+    <link rel="stylesheet" href="css/responsive.css" />
   </head>
   <body>
     <!-- <header>
@@ -75,8 +76,8 @@
         <article class="game-card">
           <h3>Adivina el Personaje</h3>
           <p>
-            Adivina el personaje de la API de Dragon Ball. Si aciertas, ganas monedas. Si
-            no, las pierdes
+            Adivina el personaje de la API de Dragon Ball. Si aciertas, ganas
+            monedas. Si no, las pierdes
           </p>
           <a href="DragonBall/index.html">Entrar</a>
         </article>
