--- a/Cliente/public/registro.html
+++ b/Cliente/public/registro.html
@@ -1,38 +1,45 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="es">
-<head>
-  <meta charset="UTF-8">
-  <title>Registro | Casino</title>
-  <link rel="stylesheet" href="css/registro.css">
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Registro | Casino</title>
+    <link rel="stylesheet" href="css/registro.css" />
+  </head>
+  <body>
+    <a href="index.html" class="casino-back">⬅ Volver al Casino</a>
 
-  <a href="index.html" class="casino-back">⬅ Volver al Casino</a>
+    <main class="auth-container">
+      <h1>Registro</h1>
 
-  <main class="auth-container">
-    <h1>Registro</h1>
+      <form class="auth-form">
+        <label for="user">Nombre de usuario</label>
+        <input type="text" id="user" required />
 
-    <form class="auth-form">
-      <label for="user">Nombre de usuario</label>
-      <input type="text" id="user" required>
+        <label for="email">Correo electrónico</label>
+        <input type="email" id="email" required />
 
-      <label for="email">Correo electrónico</label>
-      <input type="email" id="email" required>
+        <label for="password">Contraseña</label>
+        <input type="password" id="password" required />
 
-      <label for="password">Contraseña</label>
-      <input type="password" id="password" required>
+        <label for="password2">Repetir contraseña</label>
+        <input type="password" id="password2" required />
 
-      <label for="password2">Repetir contraseña</label>
-      <input type="password" id="password2" required>
+        <label for="avatar">Avatar</label>
+        <input
+          type="file"
+          id="avatar"
+          name="avatar"
+          class="file-input"
+          accept="image/*"
+        />
 
-      <button type="submit">Crear cuenta</button>
-    </form>
+        <button type="submit">Crear cuenta</button>
+      </form>
 
-    <p class="auth-extra">
-      ¿Ya tienes cuenta?
-      <a href="login.html">Inicia sesión</a>
-    </p>
-  </main>
-
-</body>
+      <p class="auth-extra">
+        ¿Ya tienes cuenta?
+        <a href="login.html">Inicia sesión</a>
+      </p>
+    </main>
+  </body>
 </html>
