--- a/public/login.html
+++ b/public/login.html
@@ -1,32 +1,31 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="es">
-<head>
-  <meta charset="UTF-8">
-  <title>Iniciar sesión | Casino</title>
-  <link rel="stylesheet" href="css/login.css">
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Iniciar sesión | Casino</title>
+    <link rel="stylesheet" href="css/login.css" />
+  </head>
+  <body>
+    <a href="index.html" class="casino-back">⬅ Volver al Casino</a>
 
-  <a href="index.html" class="casino-back">⬅ Volver al Casino</a>
+    <main class="auth-container">
+      <h1>Iniciar sesión</h1>
 
-  <main class="auth-container">
-    <h1>Iniciar sesión</h1>
+      <form class="auth-form">
+        <label for="email">Correo electrónico</label>
+        <input type="email" id="email" required />
 
-    <form class="auth-form">
-      <label for="email">Correo electrónico</label>
-      <input type="email" id="email" required>
+        <label for="password">Contraseña</label>
+        <input type="password" id="password" required />
 
-      <label for="password">Contraseña</label>
-      <input type="password" id="password" required>
+        <button type="submit">Entrar</button>
+      </form>
 
-      <button type="submit">Entrar</button>
-    </form>
-
-    <p class="auth-extra">
-      ¿No tienes cuenta?
-      <a href="registro.html">Regístrate</a>
-    </p>
-  </main>
-
-</body>
+      <p class="auth-extra">
+        ¿No tienes cuenta?
+        <a href="registro.html">Regístrate</a>
+      </p>
+      <a href="./admin/login.html" class="admin-link"> Acceso administrador </a>
+    </main>
+  </body>
 </html>
