Todo va en progreso

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <!-- Descripción de mi página -->
     <title>El Casino de la noche</title>
     <!-- Título de mi página -->
-    <link rel="stylesheet" href="./views/css/index.css" />
-    <link rel="stylesheet" href="./views/css/responsive.css" />
+    <link rel="stylesheet" href="./css/index.css" />
+    <link rel="stylesheet" href="./css/responsive.css" />
   </head>
   <body>
     <header class="casino-header">
@@ -33,7 +33,11 @@
       </nav>
 
       <div class="header-right">
-        <a href="index.php?accion=login&controller=Usuario&carpeta=public" class="login">Iniciar sesión</a>
+        <a
+          href="index.php?accion=login&controller=Usuario&carpeta=public"
+          class="login"
+          >Iniciar sesión</a
+        >
         <a
           href="index.php?accion=crear&controller=Usuario&carpeta=public"
           class="register"
@@ -79,6 +83,14 @@
             monedas. Si no, las pierdes
           </p>
           <a href="DragonBall/index.html">Entrar</a>
+        </article>
+        <article class="game-card phrases-card">
+          <h3>Frases del Casino</h3>
+          <p>
+            Gasta tus monedas en frases legendarias. Presume, vacila o humilla
+            con estilo.
+          </p>
+          <a href="frases.html">Entrar</a>
         </article>
       </section>
     </main>
